--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/leonawicz/snapstat?branch=master&svg=true)](https://ci.appveyor.com/project/leonawicz/snapstat)
 [![Coverage Status](https://img.shields.io/codecov/c/github/leonawicz/snapstat/master.svg)](https://codecov.io/github/leonawicz/snapstat?branch=master)
 
-`snapstat` provides a suite of functions for graphing and analyzing SNAP data sets. It is the primary package in the SNAPverse for users to enagage in graphical and statistical analysis of SNAP data.
+`snapstat` provides a suite of functions for graphing and analyzing SNAP data sets. It is the primary package in the [SNAPverse](https://leonawicz.github.io/snapverse/) for users to enagage in graphical and statistical analysis of SNAP data.
 
 ## Installation
 
@@ -25,4 +25,12 @@ You can install snapstat from github with:
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("leonawicz/snapstat")
+```
+
+```{r is_md, echo = FALSE}
+is_md <- knitr::opts_knit$get("rmarkdown.pandoc.to") == "markdown_github-ascii_identifiers"
+```
+
+```{r md_pkg_ref, echo = FALSE, results = "asis", eval = is_md}
+cat('## Reference\n\n[Complete package reference and function documentation](https://leonawicz.github.io/snapstat/)')
 ```
